gcc/testsuite/rust/rustc/ui/issues/issue-13641.rs
mod a {
    struct Foo;
    impl Foo { pub fn new() {} }
    enum Bar {}
    impl Bar { pub fn new() {} }
}

fn main() {
    a::Foo::new();
// { dg-error ".E0603." "" { target *-*-* } .-1 }
    a::Bar::new();
// { dg-error ".E0603." "" { target *-*-* } .-1 }
}

